# arksync

./: .dockerignore  .env.example  .gitignore  .licenserc.yaml  Cargo.toml  LICENSE  README.md  Trunk.toml  docker-compose.yml  index.html  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.config/: nextest.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  clippy-fix.yml  publish-old.yml  publish.yml
.zed/: settings.json
bash_scripts/: read_sensor.sh
bash_scripts/setup/: 99-ttyusb.rules  setup.sh
crates/actuator/: Cargo.toml
crates/actuator/src/: lib.rs  relay.rs
crates/cli/: Cargo.toml
crates/cli/src/: db.rs  main.rs
crates/config/: Cargo.toml  config_handler.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: config.rs  lib.rs  postgres.rs  postgres_reset.rs  postgres_setup.rs
crates/db/src/migrations/: migrator.rs  mod.rs  mpl_migrator.rs
crates/db/src/migrations/local/: 20260506000000_setup.down.sql  20260506000000_setup.up.sql
crates/db/tests/: postgres.rs
crates/sensor/: Cargo.toml
crates/sensor/src/: error.rs  i2c_bus.rs  lib.rs  main.rs  sensor.rs  serial_port.rs
crates/sensor/src/core/: mod.rs
crates/sensor/src/core/temperature/: dynamic.rs  dynamic_range.rs  mod.rs  unit.rs
crates/sensor/src/ezo/: ezo_sensor.rs  mod.rs  rtd.rs
crates/sensor/src/ezo/driver/: error.rs  i2c.rs  mod.rs  uart.rs
crates/sensor/src/services/: mod.rs
crates/sensor/src/services/calibration/: calibration_service.rs  mod.rs
crates/sensor/src/services/sensor/: healthcheck.rs  mod.rs  plugged_sensors.rs  sensor_service.rs  unplugged_sensors.rs
crates/ui/: Cargo.toml  index.html
crates/ui/src/: app.rs  main.rs  theme.rs
crates/ui/src/components/: heroicons.rs  mod.rs  page_layout.rs  page_title.rs  sidebar.rs
crates/ui/src/components/charts/: air_temperature_gauge.rs  mod.rs  water_temperature_chart.rs
crates/ui/src/components/grid/: grid_item.rs  grid_layout.rs  mod.rs
crates/ui/src/components/grid/core/: drop_placement.rs  drop_preview.rs  item.rs  layout.rs  mod.rs  resize_preview.rs  size.rs  span.rs
crates/ui/src/components/grid/core/collision/: aabb.rs  grid.rs  item_aabb.rs  mod.rs
crates/ui/src/components/grid/utils/: colliadable_item.rs  draggable_item.rs  mod.rs  resizable_item.rs
crates/ui/styles/: tailwind.css
crates/ui/styles/chart_themes/: walden.json  westeros.json
crates/users/: Cargo.toml
crates/users/src/: lib.rs
crates/users/src/application/: mod.rs
crates/users/src/application/use_cases/: create_user.rs  mod.rs
crates/users/src/domain/: mod.rs  user.rs
crates/users/src/stores/: definitions.rs  mod.rs  user_store.rs
docker/postgres/: Dockerfile
docker/postgres/init/: 001-extensions.sql
sensor/: Cargo.toml
sensor/src/: error.rs  i2c_bus.rs  lib.rs  main.rs  sensor.rs  serial_port.rs
sensor/src/commands/: mod.rs  uart.rs
sensor/src/core/temperature/: dynamic.rs  dynamic_range.rs  mod.rs  unit.rs
sensor/src/ezo/: command.rs  error.rs  ezo_sensor.rs  mod.rs  rtd.rs  sensor.rs
sensor/src/ezo/driver/: error.rs  i2c.rs  mod.rs  uart.rs
sensor/src/services/: mod.rs
sensor/src/services/sensor/: healthcheck.rs  mod.rs  plugged_sensors.rs  sensor_service.rs  unplugged_sensors.rs
src/: aabb.rs  app.rs  main.rs  theme.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs  relay.rs
src/components/: heroicons.rs  mod.rs  sidebar.rs
src/components/charts/: air_temperature_gauge.rs  dynamic_chart_example.rs  mod.rs  water_temperature_chart.rs
src/components/grid/: grid.rs  grid_component.rs  grid_element.rs  grid_item.rs  grid_layout.rs  mod.rs
src/components/grid/core/: item.rs  layout.rs  size.rs
src/components/grid/utils/: colliadable_item.rs  draggable_item.rs  mod.rs  resizable_item.rs
src/core/: tailwind.rs
styles/: main.css  tailwind.css
styles/chart_themes/: chalk.js  chalk.json  purple-passion-original.js  purple-passion.js  roma.js  roma.json
