[package]
name = "arksync-ui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
charming = { version = "0.6.0", features = ["wasm"] }
leptos-use = "0.16.3"
leptos_router = "0.8"
web-sys = { version = "0.3", features = ["EventListener"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["core", "event"]}
futures-util = "0.3"

[workspace]
members = ["src-tauri"]

# Waiting for a more stable version of the software, we allow some dead code and
# unused variables.
[lints.rust]
unused_variables = "allow"
dead_code = "allow"