[package]
name = "arksync"
version.workspace = true
description = "An environmental control system for farms, greenhouses and aquariums."
authors = ["theredfish"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arksync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
arksync-actuator.workspace = true
arksync-db.workspace = true
eyre.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-opener.workspace = true
tokio = { workspace = true, features = ["fs", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater.workspace = true

[lints]
workspace = true
