[package]
name = "arksync-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arksync-config.workspace = true
eyre.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "macros", "migrate", "uuid"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
