[package]
name = "arksync-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
charming.workspace = true
console_error_panic_hook.workspace = true
eyre.workspace = true
futures-util.workspace = true
js-sys.workspace = true
leptos.workspace = true
leptos-use.workspace = true
leptos_router.workspace = true
ndarray.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
tauri-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[lints]
workspace = true
